--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
+    "lint": "eslint src/**/*.ts --max-warnings=0",
     "test:staged": "jest"
   },
   "keywords": [],
