--- a/package.json
+++ b/package.json
@@ -2,37 +2,36 @@
   "name": "nodejs-rm-cleancodeapi",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest --silent --runInBand",
     "test:verbose": "jest --runInBand",
     "test:ci": "jest --coverage",
-    "lint": "eslint src/**/*.ts"
+    "lint": "eslint src/**/*.ts",
+    "prepare": "husky install"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "lint-staged": {
+    "*.ts": [
+      "eslint 'src/**' --fix"
+    ]
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.9",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "eslint": "^8.57.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.1"
-  },
-  "description": ""
+    "tsx": "^4.19.1",
+    "typescript-eslint": "^8.16.0"
+  }
 }
